# algo3-tp2

./: .gitignore  .travis.yml  CMakeLists.txt  Graficos.twb  README.md  algo3_tp2  convert.py  extend.py  extend.sh  generate.py  output.csv  output.csv.b2  run_experiments.sh  test.py
docs/: main.tex  tpalgo3.sty
experiments/: test_1_complejidad_best.in  test_1_complejidad_best.sts  test_1_complejidad_random.sts  test_1_complejidad_worst.in  test_1_complejidad_worst.sts  test_2_complejidad_best.in  test_2_complejidad_best.sts  test_2_complejidad_random.sts  test_2_complejidad_worst.in  test_2_complejidad_worst.sts  test_3_complejidad_best.in  test_3_complejidad_best.sts  test_3_complejidad_random.sts  test_3_complejidad_worst.in  test_3_complejidad_worst.sts
src/: Exercise.cpp  Exercise.h  Exercise1.cpp  Exercise1.h  Exercise2.cpp  Exercise2.h  Exercise3.cpp  Exercise3.h  Statistics.h  main.cpp  maximize_portals.py
tests/: test_1_catedra.in  test_1_catedra.sts  test_1_correctitud.expected  test_1_correctitud.in  test_1_correctitud.sts  test_2_catedra.expected  test_2_catedra.in  test_2_catedra.sts  test_2_correctitud.expected  test_2_correctitud.in  test_2_correctitud.sts  test_3_catedra.in  test_3_catedra.sts  test_3_correctitud.expected  test_3_correctitud.in  test_3_correctitud.sts
